--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Script by - DevWolf.ru
 		<meta name="keywords" content="">
 		<meta name="author" content="GameWars.fun">
 		<meta name="csrf-token" content="lx3heZeuKVAVYma8AtUp8Z3pchB6v3qiLmJbvXOO">
-		<title>GameWars – Сервис мгновенных игр, где шанс выигрыша указываете сами.
+		<title>Game2Wars – Сервис мгновенных игр, где шанс выигрыша указываете сами.
 		</title>
 		<link rel="stylesheet" type="text/css" href="files/css.css">
 		<link rel="stylesheet" type="text/css" href="files/bootstrap.min.css">
